# website

./: .buildpacks  .gitignore  404.html  A.md  B.md  C.md  CNAME  CONTRIBUTING.md  D.md  Dockerfile.local  E.md  F.md  G.md  Gemfile  H.md  I.md  J.md  K.md  L.md  LICENSE  M.md  N.md  O.md  P.md  Procfile  Q.md  R.md  README.md  S.md  T.md  U.md  V.md  W.md  X.md  Y.md  Z.md  _README.md  _config.yml  _gen_letters.sh  a-proposito.md  (+5 more)
.github/workflows/: build_deploy.yml
_data/: definitions.json
_includes/: analytics.html  footer.html  head.html  header.html  letters.html
_layouts/: home.html  letter.html
_plugins/: filters.rb
_sass/: minima.scss
_sass/minima/: _base.scss  _layout.scss
alembic/: env.py
alembic/versions/: 0208b2996203_add_target_text.py  bb725fb0ed5d_remove_search_index.py  ec5136ec9dab_init.py  f455c7ba107b_add_word_ascii.py  f550f221539e_init.py  fc7e7e332052_add_target_id.py
napweb/: app.py  database.py  main.py  routes.py  utils.py
napweb/static/sass/: _base.scss  main.scss
napweb/templates/: 404.html.j2  500.html.j2  abbreviations.html.j2  about.html.j2  base.html.j2  bottom_search_nav.html.j2  home.html.j2  intro.html.j2  letter.html.j2  letter_notice.html.j2  letters_nav.html.j2  macros.j2  search.html.j2  search_bar.html.j2  search_help.html.j2  simple_page.html.j2  word.html.j2
tests/: test_utils.py
